unpackaged/main/default/objects/zkfedex__ShipmateScheduledJobsSettings__c/zkfedex__ShipmateScheduledJobsSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Stores ZenKraft Shipmate app custom settings for scheduled apex jobs. There should only be one record max per org. Do not create a record manually or edit it manually. Use the interface available on the FedEx Shipments Tab.</description>
    <label>FedEx Shipmate Scheduled Jobs Settings</label>
</CustomObject>