unpackaged/main/default/objects/zkfedex__ShipmateScheduledJobsSettings__c/fields/zkfedex__ScheduledTrackEndTime__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__ScheduledTrackEndTime__c</fullName>
    <label>Scheduled Track End Time</label>
    <length>20</length>
    <type>Text</type>
</CustomField>