unpackaged/main/default/objects/zkfedex__ShipmateScheduledJobsSettings__c/fields/zkfedex__ScheduledTrackFriTracking__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__ScheduledTrackFriTracking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scheduled Track Fri Tracking</label>
    <type>Checkbox</type>
</CustomField>