unpackaged/main/default/objects/zkfedex__ShipmateScheduledJobsSettings__c/fields/zkfedex__ScheduledTrackMonTracking__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__ScheduledTrackMonTracking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scheduled Track Mon Tracking</label>
    <type>Checkbox</type>
</CustomField>