unpackaged/main/default/objects/zkfedex__ShipmateScheduledJobsSettings__c/fields/zkfedex__ScheduledTrackSatTracking__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__ScheduledTrackSatTracking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scheduled Track Sat Tracking</label>
    <type>Checkbox</type>
</CustomField>