unpackaged/main/default/objects/zkfedex__ShipmateScheduledJobsSettings__c/fields/zkfedex__ScheduledTrackShipmentId__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__ScheduledTrackShipmentId__c</fullName>
    <label>Scheduled Track Shipment ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>