unpackaged/main/default/objects/zkfedex__ShipmateScheduledJobsSettings__c/fields/zkfedex__ScheduledTrackStartTime__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__ScheduledTrackStartTime__c</fullName>
    <label>Scheduled Track Start Time</label>
    <length>20</length>
    <type>Text</type>
</CustomField>