unpackaged/main/default/objects/zkfedex__ShipmateScheduledJobsSettings__c/fields/zkfedex__ScheduledTrackThursTracking__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__ScheduledTrackThursTracking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scheduled Track Thurs Tracking</label>
    <type>Checkbox</type>
</CustomField>