unpackaged/main/default/objects/zkfedex__ShipmateScheduledJobsSettings__c/fields/zkfedex__ScheduledTrackTuesTracking__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__ScheduledTrackTuesTracking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scheduled Track Tues Tracking</label>
    <type>Checkbox</type>
</CustomField>